added tiemr and line at current index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div id="line"></div>
       <p id="write"></p>
     </div>
+    <div id="timer"></div>
 	<script src="index.js"></script>
   </body>
 </html>
