--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <div id="line"></div>
       <p id="write"></p>
     </div>
+    <div id="wrong"></div>
     <div id="timer"></div>
+    
 	<script src="index.js"></script>
   </body>
 </html>
